Added Elixir login capability (still need to implement callback)
