# tolid-ui/app/src/services/http/config.ts
@@ -1,0 +1,13 @@
+export const CONFIG = {
+  baseURL: '/api/v2',
+  headers: {
+    'Content-Type': 'application/json',
+  },
+};
+
+export const END_POINT = {
+  authUrlElixir: '/auth/login',
+  authToken: '/auth/token',
+  authProfile: '/auth/profile',
+  authLogout: '/auth/logout',
+};
